@@ -44,7 +44,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
 import java.util.function.LongSupplier;
-import java.util.stream.Collectors;
 
 public final class DataStream implements SimpleDiffable<DataStream>, ToXContentObject {
 
@@ -171,8 +170,14 @@ public final class DataStream implements SimpleDiffable<DataStream>, ToXContentO
             Index index = indices.get(i);
             IndexMetadata im = metadata.index(index);
 
-            // TODO: make start and end time fields in IndexMetadata class.
+            // TODO: make index_mode, start and end time fields in IndexMetadata class.
             // (this to avoid the overhead that occurs when reading a setting)
+            if (IndexSettings.MODE.get(im.getSettings()) != IndexMode.TIME_SERIES) {
+                // Not a tsdb backing index, so skip.
+                // (This can happen is this is a migrated tsdb data stream)
+                continue;
+            }
+
             Instant start = IndexSettings.TIME_SERIES_START_TIME.get(im.getSettings());
             Instant end = IndexSettings.TIME_SERIES_END_TIME.get(im.getSettings());
             // Check should be in sync with DataStreamTimestampFieldMapper#validateTimestamp(...) method
@@ -192,14 +197,21 @@ public final class DataStream implements SimpleDiffable<DataStream>, ToXContentO
     public void validate(Function<String, IndexMetadata> imSupplier) {
         if (indexMode == IndexMode.TIME_SERIES) {
             // Get a sorted overview of each backing index with there start and end time range:
-            var startAndEndTimes = indices.stream().map(index -> imSupplier.apply(index.getName())).map(im -> {
-                Instant start = IndexSettings.TIME_SERIES_START_TIME.get(im.getSettings());
-                Instant end = IndexSettings.TIME_SERIES_END_TIME.get(im.getSettings());
-                assert end.isAfter(start); // This is also validated by TIME_SERIES_END_TIME setting.
-                return new Tuple<>(im.getIndex().getName(), new Tuple<>(start, end));
-            })
+            var startAndEndTimes = indices.stream()
+                .map(index -> imSupplier.apply(index.getName()))
+                .filter(
+                    // Migrated tsdb data streams have non tsdb backing indices:
+                    im -> IndexSettings.TIME_SERIES_START_TIME.exists(im.getSettings())
+                        && IndexSettings.TIME_SERIES_END_TIME.exists(im.getSettings())
+                )
+                .map(im -> {
+                    Instant start = IndexSettings.TIME_SERIES_START_TIME.get(im.getSettings());
+                    Instant end = IndexSettings.TIME_SERIES_END_TIME.get(im.getSettings());
+                    assert end.isAfter(start); // This is also validated by TIME_SERIES_END_TIME setting.
+                    return new Tuple<>(im.getIndex().getName(), new Tuple<>(start, end));
+                })
                 .sorted(Comparator.comparing(entry -> entry.v2().v1())) // Sort by start time
-                .collect(Collectors.toList());
+                .toList();
 
             Tuple<String, Tuple<Instant, Instant>> previous = null;
             var formatter = DateFieldMapper.DEFAULT_DATE_TIME_FORMATTER;
@@ -265,13 +277,28 @@ public final class DataStream implements SimpleDiffable<DataStream>, ToXContentO
      * Performs a rollover on a {@code DataStream} instance and returns a new instance containing
      * the updated list of backing indices and incremented generation.
      *
-     * @param writeIndex new write index
-     * @param generation new generation
+     * @param writeIndex            new write index
+     * @param generation            new generation
+     * @param indexModeFromTemplate the index mode as is defined in the template that created this data stream
      *
      * @return new {@code DataStream} instance with the rollover operation applied
      */
-    public DataStream rollover(Index writeIndex, long generation) {
+    public DataStream rollover(Index writeIndex, long generation, IndexMode indexModeFromTemplate) {
         ensureNotReplicated();
+
+        return unsafeRollover(writeIndex, generation, indexModeFromTemplate);
+    }
+
+    /**
+     * Like {@link #rollover(Index, long, IndexMode)}, but does no validation, use with care only.
+     */
+    public DataStream unsafeRollover(Index writeIndex, long generation, IndexMode indexModeFromTemplate) {
+        IndexMode indexMode = this.indexMode;
+        // This allows for migrating a data stream to be a tsdb data stream:
+        // (only if index_mode=null|standard then allow it to be set to time_series)
+        if ((indexMode == null || indexMode == IndexMode.STANDARD) && indexModeFromTemplate == IndexMode.TIME_SERIES) {
+            indexMode = IndexMode.TIME_SERIES;
+        }
 
         List<Index> backingIndices = new ArrayList<>(indices);
         backingIndices.add(writeIndex);
@@ -291,7 +318,7 @@ public final class DataStream implements SimpleDiffable<DataStream>, ToXContentO
 
     /**
      * Performs a dummy rollover on a {@code DataStream} instance and returns the tuple of the next write index name and next generation
-     * that this {@code DataStream} should roll over to using {@link #rollover(Index, long)}.
+     * that this {@code DataStream} should roll over to using {@link #rollover(Index, long, IndexMode)}.
      *
      * @param clusterMetadata Cluster metadata
      *
@@ -299,6 +326,13 @@ public final class DataStream implements SimpleDiffable<DataStream>, ToXContentO
      */
     public Tuple<String, Long> nextWriteIndexAndGeneration(Metadata clusterMetadata) {
         ensureNotReplicated();
+        return unsafeNextWriteIndexAndGeneration(clusterMetadata);
+    }
+
+    /**
+     * Like {@link #nextWriteIndexAndGeneration(Metadata)}, but does no validation, use with care only.
+     */
+    public Tuple<String, Long> unsafeNextWriteIndexAndGeneration(Metadata clusterMetadata) {
         String newWriteIndexName;
         long generation = this.generation;
         long currentTimeMillis = timeProvider.getAsLong();
@@ -437,9 +471,7 @@ public final class DataStream implements SimpleDiffable<DataStream>, ToXContentO
                     "cannot add index [%s] to data stream [%s] until its alias(es) [%s] are removed",
                     index.getName(),
                     getName(),
-                    Strings.collectionToCommaDelimitedString(
-                        im.getAliases().stream().map(Map.Entry::getKey).sorted().collect(Collectors.toList())
-                    )
+                    Strings.collectionToCommaDelimitedString(im.getAliases().keySet().stream().sorted().toList())
                 )
             );
         }
@@ -567,7 +599,7 @@ public final class DataStream implements SimpleDiffable<DataStream>, ToXContentO
         timeStampField.writeTo(out);
         out.writeList(indices);
         out.writeVLong(generation);
-        out.writeMap(metadata);
+        out.writeGenericMap(metadata);
         out.writeBoolean(hidden);
         out.writeBoolean(replicated);
         out.writeBoolean(system);
