@@ -27,7 +27,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class TransportGetUsersAction extends HandledTransportAction<GetUsersRequest, GetUsersResponse> {
 
@@ -70,7 +69,7 @@ public class TransportGetUsersAction extends HandledTransportAction<GetUsersRequ
         }
 
         final ActionListener<Collection<Collection<User>>> sendingListener = ActionListener.wrap((userLists) -> {
-            users.addAll(userLists.stream().flatMap(Collection::stream).filter(Objects::nonNull).collect(Collectors.toList()));
+            users.addAll(userLists.stream().flatMap(Collection::stream).filter(Objects::nonNull).toList());
             listener.onResponse(new GetUsersResponse(users));
         }, listener::onFailure);
         final GroupedActionListener<Collection<User>> groupListener = new GroupedActionListener<>(sendingListener, 2);
